Update project before deploy